fixed background, aligned everything

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,2 @@
-body {
-    margin: 0;
-    padding: 0;
-    background-image: url('../assets/design/desktop-design-light.jpg'); /* Adjust the path based on your folder structure */
-    background-size: cover; /* or 'contain' based on your preference */
-    background-repeat: no-repeat;
-    background-attachment: fixed; /* Optional - prevents scrolling */
-  }
+
   
