--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,10 @@
 .header-container {
     max-width: 600px;
-    margin: 50px auto 20px auto;
+    margin: 0px auto 20px auto;
 }
 
 .todo-header {
+    padding-top: 50px;
     width: 100%;
     height: 35%;
     display: flex;
@@ -22,7 +23,8 @@
 
 h1 {
     color: white;
-    font-size: 2.8rem;
-    letter-spacing: 10px;
+    font-size: 2.5rem;
+    font-weight: 550;
+    letter-spacing: 3px;
     position: relative;
 }
