--- a/src/app/todo-form/todo-form.component.css
+++ b/src/app/todo-form/todo-form.component.css
@@ -2,7 +2,8 @@
     margin-top: 50px;
     max-width: 600px;
     width: 100%;   
-    margin: 50px auto 20px auto;
+    margin: 50px auto 0px auto;
+    border: 5px solid green;
 }
 
 .input-field {
