--- a/src/styles.css
+++ b/src/styles.css
@@ -6,18 +6,6 @@
   box-sizing: border-box;
 }
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p,
-figure,
-picture {
-  margin: 0;
-}
-
 h1,
 h2,
 h3,
@@ -28,16 +16,19 @@ p {
   font-weight: 400;
 }
 
-
-
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
-  background-image: url('./assets/design/bg-desktop-light.jpg');
-  /* Adjust the path based on your folder structure */
-  background-size: cover;
-  /* or 'contain' based on your preference */
-  background-position: center;
-  background-repeat: no-repeat;
+  background-color: hsl(0, 0%, 98%);
+  font-size: 18px;
+  font-family: "Josefin Sans", sans-serif;
+}
 
+.background {
+  background: url('assets/design/bg-desktop-light.jpg') no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 250px;
+  transition: all 0.3s;
 }
